--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TwitterVplay</string>
+    <string name="com.twitter.sdk.android.CONSUMER_KEY">YOUR_CONSUMER_KEY</string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET">YOUR_CONSUMER_SECRET</string>
 </resources>
